--- a/Townsville/index.html
+++ b/Townsville/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/d296ffd439.js" crossorigin="anonymous"></script>
     <title>Townsville Music</title>
 </head>
 <body>
@@ -47,17 +48,184 @@
         <div class="main-tile-dimension">
             <div class="artists">
                 <div class="image-container-artist">
-                    <img src="static/artist-images/brandon-erlinger-ford-MFbOzrcyYTk-unsplash.jpg" alt="">
+                    <img src="static/artist-images/brandon-erlinger-ford-MFbOzrcyYTk-unsplash.jpg" alt="Musician foregetting the lyrics">
                 </div>
                 <div class="artist-name">
                     <h1>Bagpipe of the Heather</h1>
                 </div>
                 <div class="artist-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis error possimus eaque, tempora cum maxime, quasi aut, nam odit quaerat assumenda vel eum est. Sunt explicabo iste deserunt ex amet!</div>
-                <div class="socials"></div>
+                <div class="artist-socials">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="artists">
+                <div class="image-container-artist">
+                    <img src="static/artist-images/anish-prajapati-5Sxh_zg5Des-unsplash.jpg" alt="Girl playing electric guitar">
+                </div>
+                <div class="artist-name">
+                    <h1>Glare Burger</h1>
+                </div>
+                <div class="artist-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis error possimus eaque, tempora cum maxime, quasi aut, nam odit quaerat assumenda vel eum est. Sunt explicabo iste deserunt ex amet!</div>
+                <div class="artist-socials">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-tiktok"></i></a>
+                </div>
+            </div>
+            <div class="artists">
+                <div class="image-container-artist">
+                    <img src="static/artist-images/chris-bulilan-4ktLEcM4PuA-unsplash (1).jpg" alt="Drummer slapping the bass">
+                </div>
+                <div class="artist-name">
+                    <h1>Literal Goblet</h1>
+                </div>
+                <div class="artist-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis error possimus eaque, tempora cum maxime, quasi aut, nam odit quaerat assumenda vel eum est. Sunt explicabo iste deserunt ex amet!</div>
+                <div class="artist-socials">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-tiktok"></i></a>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Local concerts -->
+    <section class="local-concerts" id="concerts">
+        <div class="concert-container">
+            <h2>Local Concerts</h2>
+            <h4>Townsville has a vibrant music scene. Plug in here.</h4>
+            <table>
+                <tr>
+                    <th>Artist</th>
+                    <th>Venue</th>
+                    <th>Date</th>
+                </tr>
+                <tr>
+                    <td>Alfred's Lunch</td>
+                    <td>Eastville Juggler</td>
+                    <td>08.17.23</td>
+                </tr>
+                <tr>
+                    <td>Under Tripoli</td>
+                    <td>Eastville Juggler</td>
+                    <td>08.18.23</td>
+                </tr>
+                <tr>
+                    <td>Seminal Jaundice and the Food</td>
+                    <td>Hilltop Underground</td>
+                    <td>08.18.23</td>
+                </tr>
+                <tr>
+                    <td>Island Trading</td>
+                    <td>The Venue</td>
+                    <td>08.18.23</td>
+                </tr>
+                <tr>
+                    <td>Acoustic Raptor with the Laughing Universe</td>
+                    <td>Eastville Juggler</td>
+                    <td>08.19.23</td>
+                </tr>
+                <tr>
+                    <td>Floral Dutch</td>
+                    <td>Hilltop Underground</td>
+                    <td>08.19.23</td>
+                </tr>
+                <tr>
+                    <td>Bagpipe of the Heather</td>
+                    <td>Hilltop Underground</dh>
+                    <td>08.20.23</td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+    <!-- Shop -->
+    <section class="sho" id="shop">
+        <div class="wrap-container">
+            <div class="wrapper">
+                <div class="box">
+                    <img src="static/grid-images/andre-tan-J8wrzpD0qXg-unsplash.jpg" alt="Outerwear" class="grid-image">
+                    <a href="#"><h3 class="grid-text">Outerwear</h3></a>
+                </div>
+                <div class="box">
+                    <img src="static/grid-images/bob-coyne-JjmH7cI6dzo-unsplash.jpg" alt="Posters" class="grid-image">
+                    <a href="#"><h3 class="grid-text">Posters</h3></a>
+                </div>
+                <div class="box">
+                    <img src="static/grid-images/geoffroy-danest-0fG6zACWGJY-unsplash.jpg" alt="Shirts" class="grid-image">
+                    <a href="#"><h3 class="grid-text">Shirts</h3></a>
+                </div>
+                <div class="box">
+                    <img src="static/grid-images/jan-huber-oTCRizM-PUI-unsplash.jpg" alt="CDs" class="grid-image">
+                    <a href="#"><h3 class="grid-text">CDs</h3></a>
+                </div>
+                <div class="box">
+                    <img src="static/grid-images/seth-doyle-wYrByI2RKx8-unsplash.jpg" alt="Vinyl Records" class="grid-image">
+                    <a href="#"><h3 class="grid-text">Vinyl</h3></a>
+                </div>
+                <div class="box">
+                    <img src="static/grid-images/thato-bole-hACnI2Hxv30-unsplash.jpg" alt="Hats" class="grid-image">
+                    <a href="#"><h3 class="grid-text">Hats</h3></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="bottom">
+            <div class="map">
+                <img src="static/chicago map screenshot.png" alt="Map" class="mapimg">
+            </div>
+            <div class="foothead">Info</div>
+            <div class="location">
+                <p class="tiny"><i class="fas fa-map-marker-alt"></i> Townsville, TN 69696 United States</p>
+            </div>
+            <div class="email">
+                <p class="tiny"><i class="far fa-envelope"></i> example@example.com</p>
+            </div>
+            <div class="phone">
+                <p class="tiny"><i class="fas fa-mobile-alt"></i> Call us: (696)699-6969</p>
+            </div>
+            <div class="footshows">
+                <div class="foothead">Featured Venues</div>
+                <div class="venue">
+                    <a href="#"><p class="tiny">Hilltop Underground</p></a>
+                </div>
+                <div class="venue">
+                    <a href="#"><p class="tiny">Eastville Juggler</p></a>
+                </div>
+                <div class="venue">
+                    <a href="#"><p class="tiny">Live Pavillion</p></a>
+                </div>
+                <div class="venue">
+                    <a href="#"><p class="tiny">The Venue</p></a>
+                </div>
+            </div>
+            <div class="social">
+                <div class="foothead">Social</div>
+                <div class="media">
+                    <a href="#"><p class="tiny"><i class="fab fa-facebook"></i> Facebook</p></a>
+                </div>
+                <div class="media">
+                    <a href="#"><p class="tiny"><i class="fab fa-twitter-square"></i> Twitter</p></a>
+                </div>
+                <div class="media">
+                    <a href="#"><p class="tiny"><i class="fab fa-youtube"></i> Youtube</p></a>
+                </div>
+                <div class="media">
+                    <a href="#"><p class="tiny"><i class="fab fa-instagram"></i> Instagram</p></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 </html>
+
